Prevent event info pushing clock and buttons off screen

--- a/client/app/components/conference_room/event/current_event.scss
+++ b/client/app/components/conference_room/event/current_event.scss
@@ -12,8 +12,22 @@ $default-color: #eee;
   flex-direction: column;
   justify-content: space-between;
 
-  .time-progress {
-    font-size: 3em;
+  & > div {
+    flex: 1 1 auto;
+    overflow-y: auto;
+  }
+
+  .time-progress-container {
+    flex: 0 0 5em;
+    .time-progress {
+      font-size: 3em;
+      margin-top: 0.5em;
+      margin-bottom: 0.5em;
+    }
+  }
+
+  .event-controls {
+    flex: 0 0 4.5em;
   }
 }
 
